# dir-to-docx

./: README.md  pyproject.toml
src/dir_to_docx/: __init__.py
